<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <!--<TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_bathtub"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/baiaMare"
                android:textColor="#FFF" />
            <Button
                android:id="@+id/button2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_furniture_living_room_home_house_offie"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/dressing"
                android:textColor="#FFF"
                android:layout_below="@id/button1"/>
            <Button
                android:id="@+id/button3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_bed"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/dormMare"
                android:textColor="#FFF"
                android:layout_below="@id/button2"/>
            <Button
                android:id="@+id/button4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_couple"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/holMare"
                android:textColor="#FFF"
                android:layout_below="@id/button3"/>
            <Button
                android:id="@+id/button5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_couple"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/holMic"
                android:textColor="#FFF"
                android:layout_below="@id/button4"/>
            <Button
                android:id="@+id/button6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_triple_seat_sofa"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/living"
                android:textColor="#FFF"
                android:layout_below="@id/button5"/>
            <Button
                android:id="@+id/button7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_coffee_cup"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/bucatarie"
                android:textColor="#FFF"
                android:layout_below="@id/button6"/>
            <Button
                android:id="@+id/button8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_bed"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/dormChris"
                android:textColor="#FFF"
                android:layout_below="@id/button7"/>

            <Button
                android:id="@+id/button9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/iconfinder_bathtub"
                android:drawableEnd="@drawable/iconfinder_sun"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/baieChris"
                android:textColor="#FFF"
                android:layout_below="@id/button8"/>


        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>